<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Weather CardView -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IV_MainWeather"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"/>

                <TextView
                    android:id="@+id/tv_MainWeatherState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/Home_Weather_State"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_MainWeatherContents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Home_Weather_Contents"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Button LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/bt_MainCall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Home_Weather_Call"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_call_white_36dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_MainMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:text="@string/Home_Weather_Message"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_message_white_36dp"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_MainRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/Home_Weather_Refresh"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/ic_refresh_white_36dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_GPS_Information"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_map"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tv_MainGPSInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Home_Sensor_Information"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorAccent"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_info"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tv_MainDeviceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <TextClock
        android:id="@+id/tc_MainClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

</LinearLayout>